cmake_minimum_required(VERSION 3.17)
project(ProjectIC_TF2)

set(CMAKE_CXX_STANDARD 20)

include_directories("Project IC/Project IC/Features/Aimbot")
include_directories("Project IC/Project IC/Features/Menu")
include_directories("Project IC/Project IC/Features/Menu/Input")
include_directories("Project IC/Project IC/Features/Misc")
include_directories("Project IC/Project IC/Features/Prediction")
include_directories("Project IC/Project IC/Features/Triggerbot")
include_directories("Project IC/Project IC/Features/Triggerbot/TriggerShoot")
include_directories("Project IC/Project IC/Features/Triggerbot/TriggerStab")
include_directories("Project IC/Project IC/Features/Visuals")
include_directories("Project IC/Project IC/Features/Visuals/Chams")
include_directories("Project IC/Project IC/Features/Visuals/ESP")
include_directories("Project IC/Project IC/Features/Visuals/Radar")
include_directories("Project IC/Project IC/Features/Visuals/SpectatorList")
include_directories("Project IC/Project IC/Features/Visuals/SpyWarning")
include_directories("Project IC/Project IC/Hooks")
include_directories("Project IC/Project IC/Hooks/ClientHook")
include_directories("Project IC/Project IC/Hooks/ClientModeHook")
include_directories("Project IC/Project IC/Hooks/EngineClientHook")
include_directories("Project IC/Project IC/Hooks/EngineVGuiHook")
include_directories("Project IC/Project IC/Hooks/ModelRenderHook")
include_directories("Project IC/Project IC/Hooks/PanelHook")
include_directories("Project IC/Project IC/Hooks/PredictionHook")
include_directories("Project IC/Project IC/Hooks/SurfaceHook")
include_directories("Project IC/Project IC/SDK")
include_directories("Project IC/Project IC/SDK/Includes")
include_directories("Project IC/Project IC/SDK/Interfaces")
include_directories("Project IC/Project IC/SDK/Interfaces/BaseClientDLL")
include_directories("Project IC/Project IC/SDK/Interfaces/ClientDLLSharedAppSystems")
include_directories("Project IC/Project IC/SDK/Interfaces/ClientEntityList")
include_directories("Project IC/Project IC/SDK/Interfaces/ClientModeShared")
include_directories("Project IC/Project IC/SDK/Interfaces/ConVar")
include_directories("Project IC/Project IC/SDK/Interfaces/DebugOverlay")
include_directories("Project IC/Project IC/SDK/Interfaces/EngineClient")
include_directories("Project IC/Project IC/SDK/Interfaces/EngineTrace")
include_directories("Project IC/Project IC/SDK/Interfaces/EngineVGui")
include_directories("Project IC/Project IC/SDK/Interfaces/GameEvent")
include_directories("Project IC/Project IC/SDK/Interfaces/GameMovement")
include_directories("Project IC/Project IC/SDK/Interfaces/GlobalVarsBase")
include_directories("Project IC/Project IC/SDK/Interfaces/Material")
include_directories("Project IC/Project IC/SDK/Interfaces/ModelInfo")
include_directories("Project IC/Project IC/SDK/Interfaces/ModelRender")
include_directories("Project IC/Project IC/SDK/Interfaces/MoveHelper")
include_directories("Project IC/Project IC/SDK/Interfaces/NetChannel")
include_directories("Project IC/Project IC/SDK/Interfaces/Panel")
include_directories("Project IC/Project IC/SDK/Interfaces/Prediction")
include_directories("Project IC/Project IC/SDK/Interfaces/RenderView")
include_directories("Project IC/Project IC/SDK/Interfaces/Steam")
include_directories("Project IC/Project IC/SDK/Interfaces/Surface")
include_directories("Project IC/Project IC/SDK/Interfaces/ViewRender")
include_directories("Project IC/Project IC/SDK/Main/BaseCombatWeapon")
include_directories("Project IC/Project IC/SDK/Main/BaseEntity")
include_directories("Project IC/Project IC/SDK/Main/BaseEntity/AnimState")
include_directories("Project IC/Project IC/SDK/Main/BaseObject")
include_directories("Project IC/Project IC/SDK/Main/ConVars")
include_directories("Project IC/Project IC/SDK/Main/DrawUtils")
include_directories("Project IC/Project IC/SDK/Main/EntityCache")
include_directories("Project IC/Project IC/SDK/Main/GlobalInfo")
include_directories("Project IC/Project IC/SDK/Main/VisCheck")
include_directories("Project IC/Project IC/SDK/NetVars")
include_directories("Project IC/Project IC/Utils")
include_directories("Project IC/Project IC/Utils/Color")
include_directories("Project IC/Project IC/Utils/Hash")
include_directories("Project IC/Project IC/Utils/Interface")
include_directories("Project IC/Project IC/Utils/Math")
include_directories("Project IC/Project IC/Utils/Pattern")
include_directories("Project IC/Project IC/Utils/String")
include_directories("Project IC/Project IC/Utils/UtlVector")
include_directories("Project IC/Project IC/Utils/VFunc")
include_directories("Project IC/Project IC/Utils/VMT")

add_library(ProjectIC_TF2 SHARED
        "Project IC/Project IC/Features/Aimbot/Aimbot.cpp"
        "Project IC/Project IC/Features/Aimbot/Aimbot.h"
        "Project IC/Project IC/Features/Menu/Input/Input.cpp"
        "Project IC/Project IC/Features/Menu/Input/Input.h"
        "Project IC/Project IC/Features/Menu/Menu.cpp"
        "Project IC/Project IC/Features/Menu/Menu.h"
        "Project IC/Project IC/Features/Misc/Misc.cpp"
        "Project IC/Project IC/Features/Misc/Misc.h"
        "Project IC/Project IC/Features/Prediction/Prediction.cpp"
        "Project IC/Project IC/Features/Prediction/Prediction.h"
        "Project IC/Project IC/Features/Triggerbot/TriggerShoot/TriggerShoot.cpp"
        "Project IC/Project IC/Features/Triggerbot/TriggerShoot/TriggerShoot.h"
        "Project IC/Project IC/Features/Triggerbot/TriggerStab/TriggerStab.cpp"
        "Project IC/Project IC/Features/Triggerbot/TriggerStab/TriggerStab.h"
        "Project IC/Project IC/Features/Triggerbot/TriggerBot.cpp"
        "Project IC/Project IC/Features/Triggerbot/TriggerBot.h"
        "Project IC/Project IC/Features/Visuals/Chams/Chams.cpp"
        "Project IC/Project IC/Features/Visuals/Chams/Chams.h"
        "Project IC/Project IC/Features/Visuals/ESP/ESP.cpp"
        "Project IC/Project IC/Features/Visuals/ESP/ESP.h"
        "Project IC/Project IC/Features/Visuals/Radar/Radar.cpp"
        "Project IC/Project IC/Features/Visuals/Radar/Radar.h"
        "Project IC/Project IC/Features/Visuals/SpectatorList/SpectatorList.cpp"
        "Project IC/Project IC/Features/Visuals/SpectatorList/SpectatorList.h"
        "Project IC/Project IC/Features/Visuals/SpyWarning/SpyWarning.cpp"
        "Project IC/Project IC/Features/Visuals/SpyWarning/SpyWarning.h"
        "Project IC/Project IC/Features/Visuals/Visuals.cpp"
        "Project IC/Project IC/Features/Visuals/Visuals.h"
        "Project IC/Project IC/Hooks/ClientHook/ClientHook.cpp"
        "Project IC/Project IC/Hooks/ClientHook/ClientHook.h"
        "Project IC/Project IC/Hooks/ClientModeHook/ClientModeHook.cpp"
        "Project IC/Project IC/Hooks/ClientModeHook/ClientModeHook.h"
        "Project IC/Project IC/Hooks/EngineClientHook/EngineClientHook.cpp"
        "Project IC/Project IC/Hooks/EngineClientHook/EngineClientHook.h"
        "Project IC/Project IC/Hooks/EngineVGuiHook/EngineVGuiHook.cpp"
        "Project IC/Project IC/Hooks/EngineVGuiHook/EngineVGuiHook.h"
        "Project IC/Project IC/Hooks/ModelRenderHook/ModelRenderHook.cpp"
        "Project IC/Project IC/Hooks/ModelRenderHook/ModelRenderHook.h"
        "Project IC/Project IC/Hooks/PanelHook/PanelHook.cpp"
        "Project IC/Project IC/Hooks/PanelHook/PanelHook.h"
        "Project IC/Project IC/Hooks/PredictionHook/PredictionHook.cpp"
        "Project IC/Project IC/Hooks/PredictionHook/PredictionHook.h"
        "Project IC/Project IC/Hooks/SurfaceHook/SurfaceHook.cpp"
        "Project IC/Project IC/Hooks/SurfaceHook/SurfaceHook.h"
        "Project IC/Project IC/Hooks/Hooks.cpp"
        "Project IC/Project IC/Hooks/Hooks.h"
        "Project IC/Project IC/SDK/Includes/Classes.h"
        "Project IC/Project IC/SDK/Includes/Const.h"
        "Project IC/Project IC/SDK/Includes/dt_common.h"
        "Project IC/Project IC/SDK/Includes/dt_recv.h"
        "Project IC/Project IC/SDK/Includes/Enums.h"
        "Project IC/Project IC/SDK/Includes/icons.h"
        "Project IC/Project IC/SDK/Includes/Includes.h"
        "Project IC/Project IC/SDK/Includes/MD5.cpp"
        "Project IC/Project IC/SDK/Includes/MD5.h"
        "Project IC/Project IC/SDK/Includes/Structs.h"
        "Project IC/Project IC/SDK/Interfaces/BaseClientDLL/BaseClientDLL.h"
        "Project IC/Project IC/SDK/Interfaces/ClientDLLSharedAppSystems/ClientDLLSharedAppSystems.h"
        "Project IC/Project IC/SDK/Interfaces/ClientEntityList/ClientEntityList.h"
        "Project IC/Project IC/SDK/Interfaces/ClientModeShared/ClientModeShared.h"
        "Project IC/Project IC/SDK/Interfaces/ConVar/ConVar.cpp"
        "Project IC/Project IC/SDK/Interfaces/ConVar/ConVar.h"
        "Project IC/Project IC/SDK/Interfaces/DebugOverlay/DebugOverlay.h"
        "Project IC/Project IC/SDK/Interfaces/EngineClient/EngineClient.h"
        "Project IC/Project IC/SDK/Interfaces/EngineTrace/EngineTrace.h"
        "Project IC/Project IC/SDK/Interfaces/EngineVGui/EngineVGui.h"
        "Project IC/Project IC/SDK/Interfaces/GameEvent/GameEvent.h"
        "Project IC/Project IC/SDK/Interfaces/GameMovement/GameMovement.h"
        "Project IC/Project IC/SDK/Interfaces/GlobalVarsBase/GlobalVarsBase.h"
        "Project IC/Project IC/SDK/Interfaces/Material/Material.h"
        "Project IC/Project IC/SDK/Interfaces/ModelInfo/ModelInfo.h"
        "Project IC/Project IC/SDK/Interfaces/ModelRender/ModelRender.h"
        "Project IC/Project IC/SDK/Interfaces/MoveHelper/MoveHelper.h"
        "Project IC/Project IC/SDK/Interfaces/NetChannel/NetChannel.cpp"
        "Project IC/Project IC/SDK/Interfaces/NetChannel/NetChannel.h"
        "Project IC/Project IC/SDK/Interfaces/Panel/Panel.h"
        "Project IC/Project IC/SDK/Interfaces/Prediction/Prediction.h"
        "Project IC/Project IC/SDK/Interfaces/RenderView/RenderView.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/AppsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/AppTicketCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/BillingCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/BridgeCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/CCallback.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/CGameID.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ClientCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ContentServerCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ControllerCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/CSteamAPIContext.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/CSteamID.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ECurrencyCode.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/EResult.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamAppUpdateStatsQueryType.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamBufferMethod.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamError.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamFindFilter.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamNotify.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamPaymentCardType.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamSeekMethod.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamServerType.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamSubscriptionBillingInfoType.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ESteamSubscriptionStatus.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/EVoiceResult.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/FriendGameInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/FriendsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/GameCoordinatorCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/GameServerCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/gameserveritem.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/GameServerStatsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/GameStatsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/HTTPCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientAppManager.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientApps.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientAudio.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientBilling.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientConfigStore.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientContentServer.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientDepotBuilder.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientDeviceAuth.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientEngine.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientFriends.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientGameCoordinator.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientGameServer.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientGameServerStats.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientGameStats.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientHTTP.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientInventory.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientMasterServerUpdater.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientMatchmaking.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientMatchmakingServers.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientMusic.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientNetworkDeviceManager.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientNetworking.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientProductBuilder.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientRemoteStorage.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientScreenshots.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientShortcuts.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientStreamClient.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientStreamLauncher.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientUGC.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientUnifiedMessages.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientUser.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientUserStats.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/IClientUtils.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/Interface_OSW.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/InventoryCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteam003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteam004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteam005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteam006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteam2Bridge001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteam2Bridge002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamAppList001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamApps007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamAppTicket001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamBilling001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamBilling002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient010.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient011.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient012.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient013.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient014.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient015.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient016.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamClient017.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamContentServer001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamContentServer002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamController001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends010.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends011.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends012.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends013.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends014.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamFriends015.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameCoordinator001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer010.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer011.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServer012.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameServerStats001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamGameStats001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamHTTP001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamHTTP002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamInventory001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMasterServerUpdater001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmaking009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmakingServers001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMatchmakingServers002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamMusic001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamNetworking001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamNetworking002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamNetworking003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamNetworking004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamNetworking005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamOAuth001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage010.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage011.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamRemoteStorage012.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamScreenshots001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamScreenshots002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamStreamLauncher001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUGC001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUGC002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUGC003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUnifiedMessages001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser010.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser011.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser012.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser013.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser014.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser015.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser016.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUser017.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats008.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats009.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats010.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUserStats011.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils001.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils002.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils003.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils004.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils005.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils006.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ISteamUtils007.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/MasterServerUpdaterCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/MatchmakingCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/MatchMakingKeyValuePair.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/MatchmakingServersCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/MusicCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/NetworkingCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/OAuthCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/POSIXLibrary.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/RemoteStorageCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/ScreenshotsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/servernetadr.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/Steam.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/SteamAPI.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/Steamclient.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/SteamclientAPI.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/SteamSalt.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/SteamTypes.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/Steamworks.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/StreamLauncherCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamApp.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamAppDependencyInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamAppLaunchOption.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamAppStats.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamAppVersion.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamDiscountQualifier.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamElemInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamError.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamExternalBillingInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamGlobalUserID.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamOfflineStatus.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamPaymentCardInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamPaymentCardReceiptInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamPrepurchaseInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamPrepurchaseReceiptInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamProgress.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamSplitLocalUserID.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamSubscription.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamSubscriptionBillingInfo.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamSubscriptionDiscount.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamSubscriptionReceipt.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamSubscriptionStats.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/TSteamUpdateStats.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/UGCCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/UnifiedMessagesCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/UserCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/UserStatsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/UtilsCommon.h"
        "Project IC/Project IC/SDK/Interfaces/Steam/Win32Library.h"
        "Project IC/Project IC/SDK/Interfaces/Surface/Surface.h"
        "Project IC/Project IC/SDK/Interfaces/ViewRender/ViewRender.h"
        "Project IC/Project IC/SDK/Interfaces/Interfaces.cpp"
        "Project IC/Project IC/SDK/Interfaces/Interfaces.h"
        "Project IC/Project IC/SDK/Main/BaseCombatWeapon/BaseCombatWeapon.cpp"
        "Project IC/Project IC/SDK/Main/BaseCombatWeapon/BaseCombatWeapon.h"
        "Project IC/Project IC/SDK/Main/BaseEntity/AnimState/Activity.h"
        "Project IC/Project IC/SDK/Main/BaseEntity/AnimState/BaseAnimatingOverlay.h"
        "Project IC/Project IC/SDK/Main/BaseEntity/AnimState/MultiPlayerAnimState.h"
        "Project IC/Project IC/SDK/Main/BaseEntity/AnimState/TFPlayerAnimState.h"
        "Project IC/Project IC/SDK/Main/BaseEntity/BaseEntity.cpp"
        "Project IC/Project IC/SDK/Main/BaseEntity/BaseEntity.h"
        "Project IC/Project IC/SDK/Main/BaseObject/BaseObject.cpp"
        "Project IC/Project IC/SDK/Main/BaseObject/BaseObject.h"
        "Project IC/Project IC/SDK/Main/ConVars/ConVars.cpp"
        "Project IC/Project IC/SDK/Main/ConVars/ConVars.h"
        "Project IC/Project IC/SDK/Main/DrawUtils/DrawUtils.cpp"
        "Project IC/Project IC/SDK/Main/DrawUtils/DrawUtils.h"
        "Project IC/Project IC/SDK/Main/EntityCache/EntityCache.cpp"
        "Project IC/Project IC/SDK/Main/EntityCache/EntityCache.h"
        "Project IC/Project IC/SDK/Main/GlobalInfo/GlobalInfo.h"
        "Project IC/Project IC/SDK/Main/VisCheck/VisCheck.cpp"
        "Project IC/Project IC/SDK/Main/VisCheck/VisCheck.h"
        "Project IC/Project IC/SDK/NetVars/NetVars.cpp"
        "Project IC/Project IC/SDK/NetVars/NetVars.h"
        "Project IC/Project IC/SDK/SDK.h"
        "Project IC/Project IC/Utils/Color/Color.h"
        "Project IC/Project IC/Utils/Hash/Hash.cpp"
        "Project IC/Project IC/Utils/Hash/Hash.h"
        "Project IC/Project IC/Utils/Interface/Interface.cpp"
        "Project IC/Project IC/Utils/Interface/Interface.h"
        "Project IC/Project IC/Utils/Math/Math.h"
        "Project IC/Project IC/Utils/Pattern/Pattern.cpp"
        "Project IC/Project IC/Utils/Pattern/Pattern.h"
        "Project IC/Project IC/Utils/String/String.cpp"
        "Project IC/Project IC/Utils/String/String.h"
        "Project IC/Project IC/Utils/UtlVector/UtlVector.h"
        "Project IC/Project IC/Utils/VFunc/VFunc.h"
        "Project IC/Project IC/Utils/VMT/VMT.h"
        "Project IC/Project IC/Utils/Utils.h"
        "Project IC/Project IC/DLLMain.cpp")

find_package(SDL2 REQUIRED)
target_include_directories(ProjectIC_TF2 PRIVATE "${SDL2_INCLUDE_DIRS}")
